<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:checked="true"
            android:title="@string/navigation_title_home" />

        <item
            android:id="@+id/navigation_absen_guru"
            android:icon="@drawable/ic_circle_profile"
            android:title="@string/navigation_title_absen_guru" />

        <item
            android:id="@+id/navigation_absen_siswa"
            android:icon="@drawable/ic_circle_profile"
            android:title="@string/navigation_title_absen_siswa" />

        <item
            android:id="@+id/navigation_materi_pelajaran"
            android:icon="@drawable/ic_materi"
            android:title="@string/navigation_title_materi_pelajaran" />

        <item
            android:id="@+id/navigation_info_pendaftaran"
            android:icon="@drawable/ic_info"
            android:title="@string/navigation_title_info_pendaftaran" />

        <item
            android:id="@+id/navigation_contact"
            android:icon="@drawable/ic_contacts"
            android:title="@string/navigation_title_contact" />

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/navigation_title_settings" />

        <item android:id="@+id/navigation_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/navigation_title_logout"/>
    </group>
</menu>