<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".views.fragment.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp">

            <LinearLayout
                android:id="@+id/layout_background_header_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_header_home"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/smk_publik"
                    android:textAllCaps="true"
                    android:textColor="#382623"
                    android:textSize="@dimen/_24sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:text="@string/sekolah_menengah_kejuruan"
                    android:textAllCaps="false"
                    android:textColor="#382623"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:text="@string/terakreditasi_b"
                    android:textAllCaps="true"
                    android:textColor="#80365b"
                    android:textSize="@dimen/_19sdp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignBottom="@id/layout_background_header_home"
                app:srcCompat="@drawable/bg_bottom_header_home" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_32sdp"
            tools:visibility="gone"
            app:srcCompat="@drawable/logo_smk_publik_makasar" />

        <com.yinglan.shadowimageview.ShadowImageView
            android:id="@+id/smk_publik_image_building"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_200sdp"
            tools:visibility="gone"
            android:layout_gravity="center_horizontal"
            app:shadowColor="@android:color/darker_gray"
            app:shadowRound="@dimen/_90sdp"
            app:shadowSrc="@drawable/image_banner_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/bg_visi_title"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visi_smk_publik_title"
                android:textAllCaps="true"
                android:textColor="#382623"
                android:textSize="@dimen/_21sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_visi_smk_publik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/visi_smk_publik"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/bg_visi_title"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/misi_smk_publik_title"
                android:textAllCaps="true"
                android:textColor="#382623"
                android:textSize="@dimen/_21sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_horizontal"
                android:gravity="left"
                android:padding="@dimen/_5sdp"
                android:text="@string/misi_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_horizontal"
                android:gravity="left"
                android:padding="@dimen/_5sdp"
                android:text="@string/misi_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_horizontal"
                android:gravity="left"
                android:padding="@dimen/_5sdp"
                android:text="@string/misi_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_horizontal"
                android:gravity="left"
                android:padding="@dimen/_5sdp"
                android:text="@string/misi_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_horizontal"
                android:gravity="left"
                android:padding="@dimen/_5sdp"
                android:text="@string/misi_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded"
                android:layout_marginBottom="@dimen/_16sdp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>