<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:background="@color/colorPrimary">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4B4C68" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_input_username_siswa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:inputType="text"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/_17sdp"
        tools:text="Wiwin Hardy" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/nama"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4B4C68" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_input_name_siswa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:inputType="text"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/_17sdp"
        tools:text="******" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4B4C68" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_input_password_siswa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:inputType="textPassword"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/_17sdp"
        tools:text="******" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/email_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4B4C68" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_input_email_siswa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:inputType="textEmailAddress"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/_17sdp"
        tools:text="******" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/kelas"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4B4C68" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_kelas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:textSize="@dimen/_17sdp"
        app:ms_arrow_tint="@color/colorAccent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/text_jurusan"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4B4C68" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_jurusan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:textSize="@dimen/_17sdp"
        app:ms_arrow_tint="@color/colorAccent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/nisn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4B4C68" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_input_nisn_siswa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:inputType="number"
        android:maxLength="10"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/_17sdp"
        tools:text="******" />

</LinearLayout>